--- a/app/src/main/res/layout/fragment_appel_hist.xml
+++ b/app/src/main/res/layout/fragment_appel_hist.xml
@@ -9,5 +9,7 @@
     <ListView
         android:id="@+id/List_Appel_Hist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:dividerHeight="8dp" />
 </FrameLayout>
