--- a/app/src/main/res/layout/fragment_debiter.xml
+++ b/app/src/main/res/layout/fragment_debiter.xml
@@ -10,7 +10,9 @@
     <ListView
         android:id="@+id/List_Cartes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:dividerHeight="2dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,11 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Ajouter ?"
-            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
-            app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />
+            app:layout_constraintEnd_toStartOf="@+id/floating_Add_Card"
+            app:layout_constraintTop_toTopOf="@+id/floating_Add_Card" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/floating_Add_Card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
