--- a/app/src/main/res/layout/list_item_card_offre.xml
+++ b/app/src/main/res/layout/list_item_card_offre.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_call" />
+        app:srcCompat="@mipmap/ic_card_icon" />
 
     <TextView
         android:id="@+id/textView_title_card_offre"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView_card_offre_item" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/textView_desc_card_offre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -58,8 +58,8 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="?android:attr/colorBackground"
         app:layout_constraintStart_toEndOf="@+id/imageView_card_offre_item"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:srcCompat="@drawable/Eleminer" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_desc_card_offre"
+        app:srcCompat="@drawable/eleminer" />
 
     <ImageButton
         android:id="@+id/button_utiliser_card_offre"
@@ -70,6 +70,6 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="?android:attr/colorBackground"
         app:layout_constraintStart_toEndOf="@+id/Button_eleminer_card_offre"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:srcCompat="@drawable/Utiliser" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_desc_card_offre"
+        app:srcCompat="@drawable/utiliser" />
 </android.support.constraint.ConstraintLayout>
